feat: database, jpa and flyway config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=spring-security
+# Database (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+# JPA
+spring.jpa.show-sql=true
+
+# Flyway
+spring.flyway.enabled=true
